# camper-agent

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig.defaults
docs/: Enclosure Layout Draft.md
main/: BluetoothScanner.cpp  BluetoothScanner.hpp  CMakeLists.txt  Kconfig.projbuild  LteConnectionManager.cpp  LteConnectionManager.hpp  MqttPublisher.cpp  MqttPublisher.hpp  TelemetryCollector.cpp  TelemetryCollector.hpp  TelemetryQueue.cpp  TelemetryQueue.hpp  TelemetryTypes.hpp  main.cpp
